<resources>
    <string name="app_name">rtu_student_portal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
<<<<<<< HEAD

    <!-- String related to information of the user -->
    <string name="student_fragment_info">Jane Doe</string>
    <string name="student_id">2000-999999</string>
=======
    <string name="student_id_no">Student ID No.</string>
    <string name="student_batch">Student Batch</string>
    <string name="student_class">Student Class</string>
    <string name="personal_data">Personal Data</string>
    <string name="surname">Surname</string>
    <string name="name"></string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="province_origin">Province/Origin</string>
    <string name="nationality">Nationality</string>
    <string name="religion">Religion</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="student_number">Student number</string>

    <string-array name="batch">
        <item>"2015"</item>
        <item>"2016"</item>
        <item>"2017"</item>
        <item>"2018"</item>
        <item>"2019"</item>
        <item>"2020"</item>
        <item>"2021"</item>
    </string-array>
    <string-array name="sclass">
        <item>"CEAT"</item>
        <item>"CBET"</item>
        <item>"IPE"</item>
        <item>"SHS"</item>
    </string-array>
    <string-array name="sprovince">
        <item>"NCR"</item>
        <item>"CAR"</item>
        <item>"Region I"</item>
        <item>"Region II"</item>
        <item>"Region III"</item>
        <item>"Region IV-A"</item>
        <item>"Region IV-B"</item>
        <item>"Region V"</item>
        <item>"Region VI"</item>
        <item>"Region VII"</item>
        <item>"Region VIII"</item>
        <item>"Region ARMM"</item>
    </string-array>
    <string-array name="sreligion">
        <item>"Catholic"</item>
        <item>"Iglesya Ni Cristo (INC)"</item>
        <item>"Born Again"</item>
        <item>"Islam"</item>
    </string-array>
>>>>>>> parent of aefa7d5 (Owshiii)
</resources>